# nexus

./: .gitignore  README.md  test-write.txt
.github/workflows/: ci.yml
examples/pipeline/: README.md
go/: go.mod
go/cmd/nexusd/: main.go
go/examples/: pipeline.go
go/internal/api/: http.go
go/internal/runtime/: runtime.go
go/internal/scheduler/: scheduler.go
go/internal/types/: types.go
python/: pyproject.toml
python/examples/: pipeline.py
python/src/nexus/: __init__.py  bridge.py  export.py  numpy_bridge.py  types.py
rust/: Cargo.toml
rust/src/: bridge.rs  ffi.rs  lib.rs  memory.rs  types.rs
ts/: package-lock.json  package.json
ts/examples/: dashboard.ts
ts/src/: client.ts  index.ts  vite-plugin.ts  wasm.ts
