[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexus-py"
version = "0.1.0"
description = "Nexus Python bridge — cross-language runtime client"
authors = [{name = "Nexus Contributors"}]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "requests>=2.28",
]

[project.scripts]
nexus = "nexus.cli:main"
