[package]
name = "nexus-core"
version = "0.1.0"
edition = "2021"
description = "Nexus cross-language runtime bridge core"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
bincode = "1"
libc = "0.2"
once_cell = "1"

[target.'cfg(any(target_arch = "x86_64", target_arch = "aarch64"))'.dependencies]
wide = "0.7"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
